styles.css
/* fixes for Obsidian */

.setting-item.is-disabled {
    opacity: 0.3;
}

/* specifics */

#psk-gallery {
    background-color: hsla(0, 0%, 0%, 0.75);
    color: white;
    /* https://docs.obsidian.md/Reference/CSS+variables/Foundations/Layers
    `--layer-modal` is 50
    `--layer-notice` is 60
    */
    overflow: clip;
    z-index: var(--layer-modal);
}

#psk-gallery:focus {
    border: 3px solid var(--color-accent);
    border-radius: var(--radius-l);
}

#psk-gallery .infobar {
    background-color: rgba(255, 255, 255, 0.15);
    height: 25vh;
}

#psk-gallery .progressbar {
    width: 50vw;
    height: 1rem;
    overflow: clip;
    background-color: rgba(0, 0, 0, 0.5);
    border-radius: 1rem;
}

#psk-gallery .progressbar > div {
    background-color: var(--color-accent);
    border-radius: 1rem;
    transition: transform 0.1s ease;
}

.block-language-psk {
    padding: 1rem;
}

.block-language-psk table {
    /* overriding `.markdown-rendered table` */
    margin-block-start: 0;
    margin-block-end: 0;
}

/* "components" */

.hoverbar {
    opacity: 0;
    transition: opacity 0.5s ease-in;
}

.hoverbar:hover {
    opacity: 1;
}

/* Based on https://tailwindcss.com/docs/object-fit#containing-within */
.zebra {
    background-image: repeating-linear-gradient(-45deg, rgba(255, 255, 255, 0.25) 0 1px, rgba(0, 0, 0, 0) 0 50%);
    background-size: 8px 8px;
}

img.psk-thumbnail {
    height: 120px;
    aspect-ratio: 3 / 2;
    object-fit: cover;
    border-radius: 5px;
    border: 2px solid lightblue;
}

.image-grid-2 {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
    gap: 0.5rem;
}

.image-grid-2 img {
    width: 100%;
    aspect-ratio: 1 / 1;
    object-fit: cover;
}

.image-grid-4 {
    display: grid;
    grid-template-columns: repeat(4, minmax(0, 1fr));
    gap: 0.5rem;
}

.image-grid-4 img {
    width: 100%;
    aspect-ratio: 1 / 1;
    object-fit: cover;
}

.image-grid-4 .selected {
    border: 1px solid lightblue;
}

.image-grid-4 .caption {
    overflow: hidden;
    text-overflow: ellipsis;
    word-break: break-word;
    overflow-wrap: anywhere;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 3;
    line-clamp: 3;
}

/* utils */

.hidden {
    display: none;
}

.absolute {
    position: absolute;
}

.fixed {
    position: fixed;
}

.relative {
    position: relative;
}

.bottom-0 {
    bottom: 0;
}

.right-0 {
    right: 0;
}

.inset-0 {
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
}

.w-full {
    width: 100%;
}

.h-full {
    height: 100%;
}

.my-sm {
    margin-block: 1rem;
}

.my-xs {
    margin-block: 0.5rem;
}

.row {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.row-spacing-sm {
    column-gap: 1rem;
}

.row-spacing-xs {
    column-gap: 0.5rem;
}

.column {
    display: flex;
    flex-direction: column;
}

.column-spacing-sm {
    row-gap: 1rem;
}

.column-spacing-xs {
    row-gap: 0.5rem;
}

.flex-center {
    display: flex;
    justify-content: center;
    align-items: center;
}

.flex-wrap {
    flex-wrap: wrap;
}

.object-contain {
    object-fit: contain;
}

